// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileViewer/BinaryFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        0
         lines · 
        24.0 KB
      </span>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-7"
        data-slot="button"
        tabindex="0"
        title="Copy"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="text-muted-foreground px-4 py-8 text-center text-sm"
    >
      Binary file — 
      24.0 KB
    </div>
  </div>
</div>
`;

exports[`FileViewer/Loading matches snapshot 1`] = `
<div>
  <div
    class="divide-border border-border divide-y rounded-md border"
  >
    <div
      class="flex items-center gap-2 px-4 py-2"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-48"
        data-slot="skeleton"
      />
    </div>
    <div
      class="p-4"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-64 w-full"
        data-slot="skeleton"
      />
    </div>
  </div>
</div>
`;

exports[`FileViewer/TruncatedFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 text-muted-foreground flex items-center justify-between border-b px-4 py-2 text-xs"
    >
      <span>
        4
         lines · 
        1.0 MB
         · truncated
      </span>
      <button
        class="group/button inline-flex shrink-0 items-center justify-center rounded-lg border border-transparent bg-clip-padding text-sm font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 hover:bg-muted hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 size-7"
        data-slot="button"
        tabindex="0"
        title="Copy"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-copy size-3.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            ry="2"
            width="14"
            x="8"
            y="8"
          />
          <path
            d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
          />
        </svg>
      </button>
    </div>
    <div
      class="_code-block_26d040"
    >
      <div
        class="_code-content_26d040"
      >
        <pre
          class="shiki shiki-themes github-light github-dark"
          style="--shiki-light: #24292e; --shiki-dark: #e1e4e8; --shiki-light-bg: #fff; --shiki-dark-bg: #24292e;"
          tabindex="0"
        >
          <code>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="1"
              >
                1
              </span>
              <span>
                line 1
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="2"
              >
                2
              </span>
              <span>
                line 2
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="3"
              >
                3
              </span>
              <span>
                line 3
              </span>
              

            </span>
            <span
              class="_line_26d040"
            >
              <span
                class="_line-number_26d040"
                data-line-number="4"
              >
                4
              </span>
              <span>
                ... (truncated)
              </span>
              

            </span>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileViewer/TypeScriptFile matches snapshot 1`] = `
<div>
  <div
    class="border-border overflow-hidden rounded-md border"
  >
    <div
      class="border-border bg-muted/40 border-b px-4 py-2"
    >
      <div
        class="animate-pulse rounded-md bg-muted h-4 w-32"
        data-slot="skeleton"
      />
    </div>
    <div
      class="flex gap-4 p-4"
    >
      <div
        class="space-y-1.5"
      >
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5 w-6"
          data-slot="skeleton"
        />
      </div>
      <div
        class="flex-1 space-y-1.5"
      >
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 30%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 77%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 64%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 51%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 38%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 85%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 72%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 59%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 46%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 33%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 80%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 67%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 54%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 41%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 88%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 75%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 62%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 49%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 36%;"
        />
        <div
          class="animate-pulse rounded-md bg-muted h-3.5"
          data-slot="skeleton"
          style="width: 83%;"
        />
      </div>
    </div>
  </div>
</div>
`;
